k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - multi-docker-k8s.tk
        - www.multi-docker-k8s.tk
      secretName: multi-docker-k8s-tk
  rules:
    - host: multi-docker-k8s.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
    - host: www.multi-docker-k8s.tk
      http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api
            backend:
              serviceName: api-cluster-ip-service
              servicePort: 5000
